# totk-lotuskit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
angelscript/: CLOBBER_mirror.sh
angelscript/patches/: 0001-init-fix-sign-compare.patch  0002-init-fix-symboltable-static-initialize.patch  0003-as-compiler-int-in-bool-context.patch  0004-stdstring-flatten-include.patch  0005-fix-as-restore-misordered-initialization.patch
angelscript/source/: as_compiler.cpp  as_restore.cpp
cmake/: toolchain.cmake
dt_totk/: CLOBBER_mirror_headers.sh  README.md
dt_totk/patches/: 0001-nn-init.patch  0002-agl-layer.patch  0003-agl-renderinfo.patch  0004-sead-textwriter.patch  0005-sead-heapmgr.patch  0006-sead-thread.patch  0007-sead-ringbuffer.patch  0008-sead-safestring.patch  0009-pre-primitive-tweaks.patch  0010-nvn-vertex-attr.patch  0011-socket-hack-reduce-typedef.patch
exefs_patches/: README.md  build.py
exefs_patches/lotuskit-playercamera-unlock/: 082CE09B06E33A123CB1E2770F5F9147709033DB.ips
exefs_patches/lotuskit-standardallocator-shrink-2MB/: 082CE09B06E33A123CB1E2770F5F9147709033DB.ips  9B4E43650501A4D4489B4BBFDB740F26AF3CF850.ips  D5AD6AC71EF53E3E52417C1B81DBC9B4142AA3B3.ips
exefs_patches/nn-standardallocator-shrink-2MB/: 082CE09B06E33A123CB1E2770F5F9147709033DB.ips  9B4E43650501A4D4489B4BBFDB740F26AF3CF850.ips  D5AD6AC71EF53E3E52417C1B81DBC9B4142AA3B3.ips
exefs_patches/runtime_patches/: README.md
exlaunch/: CLOBBER_mirror.sh  README.md
exlaunch/patches/: 0001-missing-stringify-macro.patch  0002-feature-install-at-named-reloc.patch  0002-feature-install-at-static-offset.patch  0003-feature-expose-hook-limits.patch  0004-hack-InlineFloatCtx-S-only.patch
frontend/: index.html  run.py  taseditor.html
frontend/angelscript-notebook/: README.md  actor.as  camera.as  event.as  hotkey.as  index-builtin.json  output.as  pause.as  player.as  sys.as  tas.as  world.as
frontend/assets/: index.html  style.css  translate.mjs
frontend/assets/data/: Actor_MasterList.mjs  Event_NameList.mjs  ingest_hashes.py
frontend/assets/img/: stamina.xcf
frontend/assets/js-vendor/: fuzzysort@3.1.0.mjs  preact-hooks@10.22.1.mjs  preact-signals-core@1.7.0.mjs  preact-signals@1.3.0.mjs  preact@10.23.1.mjs  prismjs-custom@1.29.0.mjs
ips_patches/: build.py
ips_patches/exefs_patches/: README.md
ips_patches/runtime_patches/: README.md
ips_patches/runtime_patches/lotuskit-disable-backface-culling/: 082CE09B06E33A123CB1E2770F5F9147709033DB.ips  9B4E43650501A4D4489B4BBFDB740F26AF3CF850.ips  D5AD6AC71EF53E3E52417C1B81DBC9B4142AA3B3.ips
ips_patches/runtime_patches/lotuskit-fixed-20fps/: 082CE09B06E33A123CB1E2770F5F9147709033DB.ips  9B4E43650501A4D4489B4BBFDB740F26AF3CF850.ips  D5AD6AC71EF53E3E52417C1B81DBC9B4142AA3B3.ips
ips_patches/runtime_patches/lotuskit-fixed-30fps/: 082CE09B06E33A123CB1E2770F5F9147709033DB.ips  9B4E43650501A4D4489B4BBFDB740F26AF3CF850.ips  D5AD6AC71EF53E3E52417C1B81DBC9B4142AA3B3.ips
module/: subsdk9.json.template  subsdk9.ld  subsdk9.specs.template
romfs/totk_lotuskit/: config.example.json  config.json
src/: common.hpp  lib.hpp  nn.hpp  types.h
src/helpers/: ConfigHelper.hpp  InputHelper.cpp  InputHelper.hpp  TASHelper.cpp  TASHelper.hpp
src/lib/: libsetting.hpp  module.cpp  netdb.h  poll.h  socket_hack.hpp
src/lib/diag/: assert.hpp
src/lib/hook/: inline.hpp  replace.hpp  trampoline.hpp
src/lib/init/: init.cpp
src/lib/program/: README.md  loggers.hpp  offsets.hpp  setting.hpp  version.hpp
src/lib/util/: typed_storage.hpp
src/nn/: hid.hpp  nifm.hpp  nn_common.hpp  ro.hpp  socket.h  socket.hpp  util.hpp
src/nn/util/: util_typed_storage.hpp
src/program/: ActorWatcher.hpp  Config.cpp  Config.hpp  HexDump.hpp  Logger.cpp  Logger.hpp  PrimitiveDrawer.cpp  PrimitiveDrawer.hpp  TextWriter.cpp  TextWriter.hpp  config.cpp  config.hpp  const_addrs.hpp  exlaunch.hpp  hooks.hpp  main.cpp  setting.hpp  structs.hpp
src/program/PracticeMod/: fabs_fix.cpp  fabs_fix.hpp  misc.h  zuggle.cpp  zuggle.hpp
src/program/hooks/: main.hpp  main_draw.hpp  main_world.hpp  tas.hpp
src/program/logger/: Logger.cpp  Logger.hpp
src/program/script/: engine.cpp  engine.hpp  globals.cpp  globals.hpp  hotkey.cpp  hotkey.hpp  schedule.cpp  schedule.hpp
src/program/server/: JsonDispatch.cpp  JsonDispatch.hpp  SocketThread.hpp  WebSocket.cpp  WebSocket.hpp
src/program/structs/: VFRMgr.hpp  aresResource.hpp  as.hpp  bbBlackboard.hpp  engineActor.hpp  engineComponent.hpp  engineEvent.hpp  engineSystemPause.hpp  engineTransceiver.hpp  engineUtil.hpp  exkingEnums.hpp  gameComponent.hpp  gamePlayer.hpp  nnSixAxis.hpp  phive.hpp
src/program/tas/: InputDisplay.cpp  InputDisplay.hpp  Playback.cpp  Playback.hpp  Record.cpp  Record.hpp  config.cpp  config.hpp
src/program/util/: actor.cpp  actor.hpp  alloc.hpp  camera.cpp  camera.hpp  color.hpp  disasm.cpp  disasm.hpp  disasm_gen.py  disasm_gen_horsetrain.py  event.cpp  event.hpp  fps.cpp  fps.hpp  fs.cpp  fs.hpp  gamedata.cpp  gamedata.hpp  hash.hpp  patch.cpp  patch.hpp  pause.cpp  pause.hpp  player.cpp  player.hpp  romfs.cpp  romfs.hpp  stack_trace.hpp  trace.cpp  trace.hpp  world.cpp  world.hpp
subrepo/agl/: CLOBBER_mirror.sh
subrepo/agl/patches/: 0001-agl-layer.patch  0002-agl-renderinfo.patch  0003-agl-draw-context-enum.patch
subrepo/angelscript/: CLOBBER_mirror.sh
subrepo/angelscript/include/: scriptstdstring.h
subrepo/angelscript/patches/: 0001-init-fix-sign-compare.patch  0002-init-fix-symboltable-static-initialize.patch  0004-stdstring-flatten-include.patch  0005-fix-as-restore-misordered-initialization.patch  0006-stdstring-to-lotuskit-string.patch  0007-stdstring-to-lotuskit-string-pt2.patch
subrepo/angelscript/source/: as_callfunc_arm64.cpp  as_symboltable.h  (+2 more)
subrepo/exlaunch/: CLOBBER_mirror.sh
subrepo/nnheaders/: CLOBBER_mirror.sh
subrepo/sead/: CLOBBER_mirror.sh
subrepo/zstd_include/: README.md
syms/: README.md  build.py  build_helper_itanium_demangler.py  build_helper_mangle.sh  build_types.py
syms/agl/: agl_hacks.py
(+238 files in other folders)
